# bag2mp4

./: CMakeLists.txt  README.md  package.xml  setup.sh
launch/: extract_bag_images.launch
script/: images2video.sh
