<?xml version="1.0"?>
<package format="2">
  <name>bag2mp4</name>
  <version>1.0.0</version>
  <description>Simple ROS tool to extract images and videos from bag files</description>

  <maintainer email="rragde@upo.es">RicardoRagel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosbag</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>
</package>
